--- a/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
@@ -5,21 +5,24 @@
   }
   
   .column-left {
-    width: 30%;
-    /* background-color: rgba(0, 0, 0, 0.851); */
-    background-color: rgba(255, 0, 0, 0.851);
+    width: 25%;
+    background-color: rgba(0, 0, 0, 0.76);
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  
   .column-right {
     flex: 1;
     padding: 20px;
+    display: flex;
+    flex-direction: column; /* Garante que os elementos sejam empilhados verticalmente */
+    align-items: center;
   }
   
   .titleLarge{
     font-size: 250%;
   }
+
+
