--- a/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-if/modal-if.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-if/modal-if.component.html
@@ -15,7 +15,10 @@
 
         <p class="titleLow">Valor de Y:</p>
         <input type="text" class="rounded-input" name="emailInput" [(ngModel)]="valY">
-        <p class="error, paragraph" *ngIf="showError">Apenas numeros são aceitos</p>
+        
+        <p class="titleLow">Quantidade de instruções:</p>
+        <input type="text" class="rounded-input" name="emailInput" [(ngModel)]="quantityInstructions">
+        <p class="error, paragraph" *ngIf="showError">{{errorMesage}}</p>
         <button class="button button-text" (click)="addNewComand()">Adicionar</button>
     </form>
 </div>
