--- a/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
@@ -17,8 +17,10 @@
     flex: 1;
     padding: 20px;
     display: flex;
-    flex-direction: column; /* Garante que os elementos sejam empilhados verticalmente */
+    /* Garante que os elementos sejam empilhados verticalmente */
+    flex-direction: column; 
     align-items: center;
+    /* justify-content: center; */
   }
   
   .titleLarge{
