--- a/frontend/appCasa-frontEnd/src/app/modules/game/home-student/home-student.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/home-student/home-student.component.html
@@ -3,7 +3,7 @@
     <img src="../../../../assets/images/disco-voador3.png" alt="Logo" class="logo">
     <h2 class="titleLarge">Vamos Nessa!!</h2>
     <div class="containerButtons">
-        <button routerLink="#" class="button button-text">Novo Jogo</button>
+        <button (click)="handleNewGame()" class="button button-text">Novo Jogo</button>
         <button routerLink="/game" class="button button-text">Continuar</button>
     </div>
 
