--- a/frontend/appCasa-frontEnd/src/app/modules/game/pdf-render/pdf-render.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/pdf-render/pdf-render.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="button-container">
-    <button class="button button-text">Voltar</button>
+    <button (click)="backHandler()" class="button button-text">Ir para desáfio</button>
   </div>
 <pdf-viewer [src]="pdfSrc"
 [rotation]="0"
