--- a/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-comand/modal-comand.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-comand/modal-comand.component.html
@@ -37,8 +37,8 @@
             <p class="titleLow">Ação:</p>
             <select class="dropdown-input" name="action" placeholder="Escolha seu papel" [(ngModel)]="manipulationVariable">
                 <option value="" disabled selected> </option>
-                <option value=0>Somar</option>
-                <option value=1>Diminuir</option>
+                <option value="-">Somar</option>
+                <option value="-">Diminuir</option>
               </select>
             <p class="titleLow">Valor:</p>
             <input type="text" class="rounded-input" name="emailInput" [(ngModel)]="valueManipulation"> 
