--- a/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-if/modal-if.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-if/modal-if.component.html
@@ -7,10 +7,10 @@
         <p class="titleLow">Condição:</p>
         <select class="dropdown-input" name="conditionInput" placeholder="Escolha seu papel" [(ngModel)]="condition">
             <option value="" disabled selected> </option>
-            <option value="<">maior</option>
-            <option value=">">menor</option>
-            <option value="<=">maior igual</option>
-            <option value=">=">menor igual</option>
+            <option value=">">maior</option>
+            <option value="<">menor</option>
+            <option value=">=">maior igual</option>
+            <option value="<=">menor igual</option>
             <option value="==">igual</option>
             <option value="!=">diferente</option>
           </select>
