--- a/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.css
@@ -1,7 +1,7 @@
 .split-screen {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: auto;
   }
   
   .column-left {
@@ -23,8 +23,36 @@
     /* justify-content: center; */
   }
   
-  .titleLarge{
-    font-size: 250%;
+  .titleLow{
+    font-size: 140%;
   }
 
+  .button{
+    width: 15%;
+    font-size: 20px;
+    padding: 5px;
+    align-self: flex-end;
+    margin-top: -15px;
+    margin-right: -10px;
+  }
 
+.question-container{
+ 
+  text-align: left;
+  position: relative; 
+  margin-bottom: 30px;
+
+  width: 65%;
+  height: 150px;
+  border-radius: 20px;
+  background-color: #101010;
+  box-shadow: inset 0 0 5px #767676; 
+   background-position: center center; /* Centraliza o background */
+  background-size: cover; /* Faz a imagem de fundo cobrir todo o elemento */
+
+}
+
+.text-container{
+  margin: 15px;
+  width: 90%;
+}
