salva estado antes da refatoração

--- a/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-for/modal-for.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/components/modal/modal-for/modal-for.component.html
@@ -1,7 +1,7 @@
 <div class="containerModal">
     <p class="titleMedium">Configuração ENQUANTO</p>
     <form  method="post">
-        <p class="titleLow">Valor de X:</p>
+        <p class="titleLow">Valor 1:</p>
         <input type="email" class="rounded-input" name="emailInput" [(ngModel)]="valX"> 
         
         <p class="titleLow">Condição:</p>
@@ -15,7 +15,7 @@
             <option value="!=">diferente</option>
           </select>
 
-        <p class="titleLow">Valor de Y:</p>
+        <p class="titleLow">Valor de 2:</p>
         <input type="text" class="rounded-input" name="emailInput" [(ngModel)]="valY">
         <p class="titleLow">Quantidade de instruções:</p>
         <input type="text" class="rounded-input" name="emailInput" [(ngModel)]="quantityInstructions">
