--- a/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/game-screen/game-screen.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-menu style="width: 101%; margin-left: -6px"></app-menu>
     <div class="split-screen">
         <div class="column-left">
           <!-- Conteúdo da primeira coluna -->
@@ -24,8 +25,8 @@
                   Desáfio:
                 </p>
                 <p class="paragraph">
-                  <!-- {{currentLevel.question}}   -->
-                  instrução do level instrução do level instrução do level instrução do level instrução do level
+                  {{questionLevel}}  
+                  <!-- instrução do level instrução do level instrução do level instrução do level instrução do level -->
                 </p>
         
         </div>
