--- a/frontend/appCasa-frontEnd/src/app/modules/game/game-test/game-test.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/game-test/game-test.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+        <app-menu style="width: 101%; margin-left: -6px"></app-menu>
         <p class="titleLarge">Teste do algoritimo</p>
         <div class="color" id="containerCanva"></div>
         <button *ngIf="correcAnswer==true" (click)="nextPhase()" class="button button-text" >Próxima fase</button>
