--- a/frontend/appCasa-frontEnd/src/styles.css
+++ b/frontend/appCasa-frontEnd/src/styles.css
@@ -10,10 +10,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     position: relative;
     margin: -10px;
     padding: 10px;
+    padding-top: 0px;
     text-align: center;
 }
 
