--- a/frontend/appCasa-frontEnd/src/app/modules/auth/home-page/home-page.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/auth/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-menu style="width: 101%; margin-left: -6px"></app-menu>
     <div class="login-form">
     <img src="../../../../assets/images/logo2.png" alt="Logo" class="logo">
     <h2 class="titleLarge">Ajude a salvar a galáxia</h2>
