--- a/frontend/appCasa-frontEnd/src/app/modules/auth/login/login.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-menu style="width: 101%; margin-left: -6px"></app-menu>
         <div class="login-form">
         <img src="../../../../assets/images/disco-voador2.png" alt="Logo" class="logo">
         <h2 class="titleLarge">Login</h2>
