--- a/frontend/appCasa-frontEnd/src/app/modules/auth/register/register.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/auth/register/register.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-menu style="width: 101%; margin-left: -6px"></app-menu>
     <app-message-error class="container-error" *ngIf="showErrorMessage" [errorMessage]="errorMessage"> </app-message-error>
     <div class="login-form">
     <img src="../../../../assets/images/disco-voador2.png" alt="Logo" class="logo">
