--- a/frontend/appCasa-frontEnd/src/app/modules/game/home-student/home-student.component.html
+++ b/frontend/appCasa-frontEnd/src/app/modules/game/home-student/home-student.component.html
@@ -5,7 +5,7 @@
     <h2 class="titleLarge">Vamos Nessa!!</h2>
     <div class="containerButtons">
         <button (click)="handleNewGame()" class="button button-text">Novo Jogo</button>
-        <button routerLink="/game" class="button button-text">Continuar</button>
+        <button (click)="handleContinue()" routerLink="/game" class="button button-text">Continuar</button>
     </div>
 
     </div>
